tests/fixtures/errors/e0601_bit_missing.mimz
// expect: E0601
module M {
  in s: bit
  in a: bit
  out y: bit
  y = match s {
    0 => a
  }
}
